Add support for top navigation.

--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -154,6 +154,15 @@ retain_filters_by_default = true
 ; JavaScript is not supported by the browser.
 load_results_with_js = true
 
+; This setting can be used to configure pagination control on top of results.
+; Possible options are:
+; empty string or false  No top pagination (default when load_results_with_js is
+;                        disabled)
+; simple                 Simple next/prev button pagination (default when
+;                        load_results_with_js is enabled)
+; full                   Full pagination alike the one at the bottom of results
+;top_paginator = simple
+
 [Cache]
 ; This controls whether the parsed searchspecs.yaml file will be stored to
 ; improve search performance; legal options File (store on disk) or false (do not
