Add OPAC linking to KohaRest driver.

--- a/config/vufind/KohaRest.ini
+++ b/config/vufind/KohaRest.ini
@@ -57,6 +57,9 @@ host = "http://koha-server/api"
 clientId = ""
 ; Koha API Client Secret for OAuth2 authentication
 clientSecret = ""
+; Your Koha OPAC record display URL, if you want to provide direct links to your Koha
+; OPAC. Leave this commented out to omit OPAC links.
+;opacURL = "http://koha-server/cgi-bin/koha/opac-detail.pl"
 
 ; This section controls hold behavior; note that you must also ensure that Holds are
 ; enabled in the [Catalog] section of config.ini in order to take advantage of these
