--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -2128,7 +2128,7 @@ treeSearchLimit = 100
 ; that the value of this setting must be valid Javascript code, so be careful
 ; about quoting and escaping.
 ; Note: only supported when universal is set to true.
-;create_options_js = "{cookieFlags: 'max-age=7200;secure;samesite=none'}"
+;create_options_js = "{cookie_flags: 'max-age=7200;secure;samesite=none'}"
 
 ; Matomo analytics version 4 and later (for version 3 and earlier, use Piwik section
 ; below):
