--- a/config/vufind/contentsecuritypolicy.ini
+++ b/config/vufind/contentsecuritypolicy.ini
@@ -42,7 +42,7 @@ script-src[] = "https:"
 ;script-src-elem[] = "'self'"
 connect-src[] = "'self'"
 ; If you are using Google Analytics, uncomment the line below
-;connect-src[] = "https://www.google-analytics.com"
+;connect-src[] = "https://*.google-analytics.com"
 ; worker-src required for jsTree with browsers that don't support 'strict-dynamic' (e.g. Safari):
 worker-src[] = "blob:"
 style-src[] = "'self'"
