--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -2119,20 +2119,16 @@ treeSearchLimit = 100
 ;[GoogleTagManager]
 ;gtmContainerId = "GTM-1234567"
 
-; Uncomment this section and provide your API key to enable Google Analytics. Be
-; sure to set the "universal" setting to true once your account is upgraded to
-; Universal Analytics; see:
-; https://developers.google.com/analytics/devguides/collection/upgrade/guide
+; Uncomment this section and provide your API key to enable Google Analytics.
 ;[GoogleAnalytics]
 ;apiKey = "mykey"
-;universal = false
 ; Options to pass to the ga() function's create call; if omitted, defaults to
 ; 'auto'. The example below can be uncommented to work around a common problem
 ; with browsers complaining about problems with the samesite attribute. Note
 ; that the value of this setting must be valid Javascript code, so be careful
 ; about quoting and escaping.
 ; Note: only supported when universal is set to true.
-;create_options_js = "{cookieFlags: 'max-age=7200;secure;samesite=none'}"
+;create_options_js = "{cookie_flags: 'max-age=7200;secure;samesite=none'}"
 
 ; Matomo analytics version 4 and later (for version 3 and earlier, use Piwik section
 ; below):
