Add Mink tests for simple container links.
These tests also ensure that checkRoute and sid parameters are handled properly (see #2824).

--- a/build.xml
+++ b/build.xml
@@ -488,6 +488,7 @@
     <foreach param="relfilename" absparam="filename" target="importrec">
       <fileset dir="${srcdir}/tests/data">
           <include name="*.mrc" />
+          <include name="*.xml" />
       </fileset>
     </foreach>
   </target>
