Upgrade autocomplete.js and move it from lib/ to vendor/ (#2755)

--- a/build.xml
+++ b/build.xml
@@ -335,6 +335,8 @@
 
   <!-- Copy files from node modules to themes -->
   <target name="copynodemodules">
+    <!-- autocomplete.js -->
+    <copy file="${srcdir}/node_modules/autocomplete.js/autocomplete.js" todir="${srcdir}/themes/bootstrap3/js/vendor" />
     <!-- jstree -->
     <copy todir="${srcdir}/themes/bootstrap3/js/vendor/jsTree">
       <fileset dir="${srcdir}/node_modules/jstree/dist/" >
