--- a/build.xml
+++ b/build.xml
@@ -674,6 +674,7 @@ ${git_status}
     <append destFile="${localdir}/import/marc-${BASENAME}.properties" text="building=&quot;${BASENAME}&quot;${line.separator}" />
 
     <copy file="${localdir}/import/import.properties" tofile="${localdir}/import/import-${BASENAME}.properties" />
+    <append destFile="${localdir}/import/import-${BASENAME}.properties" text="marc.unicode_normalize = C${line.separator}" />
     <reflexive>
       <fileset dir="${localdir}/import">
         <include pattern="import-${BASENAME}.properties" />
