--- a/config/vufind/HierarchyDefault.ini
+++ b/config/vufind/HierarchyDefault.ini
@@ -37,3 +37,5 @@ fullHierarchyRecordView = true
 ; conditional filters), you can turn this off for a slight performance gain.
 ; (default = true)
 checkAvailability = true
+; If true, throw an exception if hierarchy parent and sequence data is out of sync.
+validateHierarchySequences = true
