move hierarchy validation config from HierarchyDefault.ini to config.ini

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -2092,6 +2092,8 @@ treeSearchLimit = 100
 ; at a time e.g. unless custom record drivers are used. When using this setting,
 ; you may also wish to enable the ComponentParts tab in RecordTabs.ini.
 ;simpleContainerLinks = true
+; If true, throw an exception if hierarchy parent and sequence data is out of sync.
+validateHierarchySequences = true
 
 ; This section will be used to configure the feedback module.
 ; Set "tab_enabled" to true in order to enable the feedback module.
