--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "scripts": {
     "build": "npm run build:css",
     "watch": "npm run watch:css",
+    "dev": "npm run dev:css",
 
     "build:css": "npm run build:less",
     "watch:css": "npm run watch:less",
+    "dev:css": "npm run dev:less",
 
     "build:less": "grunt less",
     "build:lessdev": "grunt lessdev",
+    "dev:less": "grunt watch:lessdev && npm run watch:lessToSass",
     "watch:less": "grunt watch:less",
     "watch:lessdev": "grunt watch:lessdev",
 
