Fix a small configuration file typo.

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1947,7 +1947,7 @@ related[] = "Similar"
 ;bookplate_full = https://your-institution.edu/bookplates/%%img%%-full.jpg
 ;bookplate_thumb = https://your-institution.edu/bookplates/%%thumb%%-thumb.jpg
 
-; Data field with an array of image titles, parallel with bookplate_img_names_field.
+; Data field with an array of image titles, parallel with bookplate_images_field.
 ; Is required for alt text, even if bookplate_display_title is set to false.
 ;bookplate_titles_field = "donor_str_mv"
 
