--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   },
   "scripts": {
     "build": "npm run build:css",
+    "watch": "npm run watch:css",
+    "build-dev": "npm run build-dev:css",
+    "watch-dev": "npm run watch-dev:css",
 
     "build:css": "npm run build:less",
     "watch:css": "npm run watch:less",
+    "build-dev:css": "npm run build-dev:less",
+    "watch-dev:css": "npm run watch-dev:less",
 
-    "build:less": "grunt less",
-    "lessdev": "grunt lessdev",
+    "build:less": "grunt less && npm run lessToSass",
     "watch:less": "grunt watch:less",
-    "watch:lessdev": "grunt watch:lessdev",
+    "build-dev:less": "grunt lessdev && npm run lessToSass",
+    "watch-dev:less": "grunt watch:lessdev",
 
     "build:scss": "grunt scss",
     "watch:scss": "grunt watch:scss",
