Add more notes to config file.

--- a/config/vufind/AdminScripts.ini
+++ b/config/vufind/AdminScripts.ini
@@ -1,6 +1,9 @@
 ; This configuration file controls the scripts that can be executed via the
 ; System Maintenance menu of the Admin module.
 ;
+; PLEASE USE THIS FEATURE WITH CAUTION -- ALLOWING WEB-BASED EXECUTION OF COMMANDS IS
+; POTENTIALLY DANGEROUS IF USED IRRESPONSIBLY.
+;
 ; Each section represents a command. The section header is the URL segment used
 ; to run the command -- e.g. [Hello] maps to http://your-server/Admin/Script/Hello
 ;
@@ -13,10 +16,21 @@
 ; permission -  The permission required for a user to execute the script (if omitted,
 ;               any user with access to the Admin module can run the script)
 ;
-; See below for an example.
+; Important notes on commands:
 ;
-; PLEASE USE THIS FEATURE WITH CAUTION -- ALLOWING WEB-BASED EXECUTION OF COMMANDS IS
-; POTENTIALLY DANGEROUS IF USED IRRESPONSIBLY.
+; 1.) All commands will be run by the web server (usually as a user like apache or
+; www-data, depending on your platform). Be sure that appropriate permissions are set
+; to allow this.
+;
+; 2.) Commands are run synchronously and may time out if they take a long time. This
+; feature is primarily intended for short-running commands. If you need to trigger a
+; longer process, consider writing a script that forks a background process or adds
+; an entry to a queue that is processed elsewhere.
+;
+; 3.) You should include full paths, since the present working directory of the web
+; server may vary depending on configuration.
+;
+; See below for an example.
 
 ;[Hello]
 ;label = "Example Hello World Script"
