More robust permission settings.

--- a/config/vufind/AdminScripts.ini
+++ b/config/vufind/AdminScripts.ini
@@ -6,6 +6,8 @@
 ;
 ; Each section represents a command. The section header is the URL segment used
 ; to run the command -- e.g. [Hello] maps to http://your-server/Admin/Script/Hello
+; You can use any valid name except for [Global], which is reserved for global
+; settings.
 ;
 ; Each section should contain some or all of the following settings:
 ;
@@ -14,7 +16,10 @@
 ; command -     The actual command line to execute (REQUIRED)
 ; successCode - The return value for the command that indicates success (default = 0)
 ; permission -  The permission required for a user to execute the script (if omitted,
-;               any user with access to the Admin module can run the script)
+;               the [Global] defaultPermission will be used, and if that is blank,
+;               any user with access to the Admin module can run the script; you can
+;               also bypass defaultPermission and fail back to standard Admin access
+;               by setting this to false).
 ;
 ; Important notes on commands:
 ;
@@ -37,3 +42,11 @@
 ;command = "echo hello world"
 ;successCode = 0
 ;permission = access.HelloWorldScript
+
+; This special section contains global settings affecting all admin scripts.
+[Global]
+; This is the permission that will be used to restrict access to admin scripts,
+; unless a more specific "permission" setting is defined in an individual script
+; section elsewhere in this file. If this setting is omitted, any user with access
+; to the admin module can run scripts that do not define more specific permissions.
+defaultPermission = access.AdminScriptRunner
