Add method getAccountBlocks to PAIA

--- a/config/vufind/PAIA.ini
+++ b/config/vufind/PAIA.ini
@@ -18,6 +18,25 @@ baseUrl = ""
 ; same as for DAIA cache (see cacheLifetime setting in DAIA.ini).
 ;paiaCache = false
 
+; VuFind allows to report account blocks to the user. As PAIA blocks implicitly by
+; not issuing PAIA scopes for a patron VuFind would report any possibly missing
+; scope. Therefore with the following setting you can define for which missing scope
+; the user will get a notification in MyResearch views. By default any missing scope
+; results in a notification.
+; For a comprehensive list of PAIA scopes refer to
+; http://gbv.github.io/paia/paia.html#access-tokens-and-scopes .
+;muteAccountBlocksNotificationForScopes[] = "read_patron"
+;muteAccountBlocksNotificationForScopes[] = "update_patron"
+;muteAccountBlocksNotificationForScopes[] = "update_patron_name"
+;muteAccountBlocksNotificationForScopes[] = "update_patron_email"
+;muteAccountBlocksNotificationForScopes[] = "update_patron_address"
+;muteAccountBlocksNotificationForScopes[] = "read_fees"
+;muteAccountBlocksNotificationForScopes[] = "read_items"
+;muteAccountBlocksNotificationForScopes[] = "write_items"
+;muteAccountBlocksNotificationForScopes[] = "change_password"
+;muteAccountBlocksNotificationForScopes[] = "read_notifications"
+;muteAccountBlocksNotificationForScopes[] = "delete_notifications"
+
 ; A PAIA auth server acts as OAuth authorization server (RFC 6749) with
 ; password credentials grant, as defined in section 4.3 of OAuth specification,
 ; and/or client credentials grant, as defined in section 4.4 of the OAuth
