refactor PAIA::getAccountBlocks

--- a/config/vufind/PAIA.ini
+++ b/config/vufind/PAIA.ini
@@ -21,17 +21,17 @@ baseUrl = ""
 ; Specify what missing PAIA scopes should be reported to the user as account blocks.
 ; For a comprehensive list of PAIA scopes refer to
 ; http://gbv.github.io/paia/paia.html#access-tokens-and-scopes .
-;accountBlockNotificationsForMissingScopes[] = "read_patron"
-;accountBlockNotificationsForMissingScopes[] = "update_patron"
-;accountBlockNotificationsForMissingScopes[] = "update_patron_name"
-;accountBlockNotificationsForMissingScopes[] = "update_patron_email"
-;accountBlockNotificationsForMissingScopes[] = "update_patron_address"
-;accountBlockNotificationsForMissingScopes[] = "read_fees"
-;accountBlockNotificationsForMissingScopes[] = "read_items"
-;accountBlockNotificationsForMissingScopes[] = "write_items"
-;accountBlockNotificationsForMissingScopes[] = "change_password"
-;accountBlockNotificationsForMissingScopes[] = "read_notifications"
-;accountBlockNotificationsForMissingScopes[] = "delete_notifications"
+;accountBlockNotificationsForMissingScopes[read_patron] = "no_read_patron_scope"
+;accountBlockNotificationsForMissingScopes[update_patron] = "no_update_patron_scope"
+;accountBlockNotificationsForMissingScopes[update_patron_name] = "no_update_patron_name_scope"
+;accountBlockNotificationsForMissingScopes[update_patron_email] = "no_update_patron_email_scope"
+;accountBlockNotificationsForMissingScopes[update_patron_address] = "no_update_patron_address_scope"
+;accountBlockNotificationsForMissingScopes[read_fees] = "no_read_fees_scope"
+;accountBlockNotificationsForMissingScopes[read_items] = "no_read_items_scope"
+;accountBlockNotificationsForMissingScopes[write_items] = "no_write_items_scope"
+;accountBlockNotificationsForMissingScopes[change_password] = "no_change_password_scope"
+;accountBlockNotificationsForMissingScopes[read_notifications] = "no_read_notifications_scope"
+;accountBlockNotificationsForMissingScopes[delete_notifications] = "no_delete_notifications_scope"
 
 ; A PAIA auth server acts as OAuth authorization server (RFC 6749) with
 ; password credentials grant, as defined in section 4.3 of OAuth specification,
