--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     },
     "provide": {
         "ext-memcached": "*",
+        "ext-oci8": "*",
         "ext-soap": "*",
         "ext-sodium": "*"
     },
@@ -93,7 +94,7 @@
         "vufind-org/vufind-marc": "1.0.2",
         "webfontkit/open-sans": "^1.0",
         "wikimedia/composer-merge-plugin": "2.0.1",
-        "yajra/laravel-pdo-via-oci8": "2.4.0 || 3.0.0"
+        "yajra/laravel-pdo-via-oci8": "3.3.1"
     },
     "require-dev": {
         "behat/mink": "1.10.0",
