SierraRest: Add more configuration options for hold availability
New settings have been added to control holdability of items and bibs. Some of the code has been refactored to be reusable and requests to be cacheable.

--- a/config/vufind/SierraRest.ini
+++ b/config/vufind/SierraRest.ini
@@ -82,11 +82,6 @@ password_field = "pin"
 ; settings. Additional notes about some of these settings are available in the wiki:
 ; https://vufind.org/wiki/configuration:ils:holds
 [Holds]
-; If a colon separated list of item statuses is provided here, only matching items
-; will show hold links.  Skip this setting to allow all statuses.
-; Note that VuFind-style statuses are used here.
-;valid_hold_statuses = 'On Shelf:Charged'
-
 ; HMACKeys - A list of hold form element names that will be analyzed for consistency
 ; during hold form processing. Most users should not need to change this setting.
 HMACKeys = item_id:holdtype:level
@@ -113,16 +108,32 @@ defaultPickUpLocation = ""
 ; By default item holds are enabled. Uncomment this setting to disable item holds.
 ;enableItemHolds = false
 
-; This setting specifies which item codes disable item level holds
-item_hold_excluded_item_codes = e
+; If a colon separated list of item statuses is provided here, only matching items
+; will show hold links.  Skip this setting to allow all statuses.
+; Note that VuFind-style statuses are used here.
+;valid_hold_statuses = 'On Shelf:Charged'
 
-; This setting specifies which bib levels allow title level holds
-title_hold_bib_levels = a:b:m:d
+; A colon separated list of item codes (ICODE2 in Sierra) that disable item level
+; holds.
+item_hold_excluded_item_codes = "e"
 
-; By default a title hold can be placed even when there are no items. Uncomment this
-; to prevent holds if no items exist. If request groups are enabled, item existence
-; is checked only in the selected request group.
-;checkItemsExist = true
+; A colon separated list of item types (I TYPE in Sierra) that disable item level
+; holds.
+;item_hold_excluded_item_types = "215:251"
+
+; A colon separated list of bib levels that enable title level holds
+title_hold_bib_levels = "a:b:m:d"
+
+; If a colon separated list of rules is provided here, title level hold is only
+; displayed for records matching any of the rules.
+; Valid rules are:
+; item                    The title must have at least one item
+; holdable_item           The title must have at least one item that matches the
+;                         item holdability rules (regardless of whether item holds
+;                         are enabled)
+; order                   The title must have at least one active order (order
+;                         record with "ON ORDER" status)
+;title_hold_rules = "holdable_item:order"
 
 ; Fields that can be updated for holds (unless the hold is already in transit or
 ; available for pickup). Supported values are "frozen" and "pickUpLocation".
