Fixes to comments and tweaks to bib rule handling.

--- a/config/vufind/SierraRest.ini
+++ b/config/vufind/SierraRest.ini
@@ -110,7 +110,8 @@ defaultPickUpLocation = ""
 
 ; If a colon separated list of item statuses is provided here, only matching items
 ; will show hold links.  Skip this setting to allow all statuses.
-; Note that VuFind-style statuses are used here.
+; Note that mapped status strings are used here (see the [ItemStatusMappings] for
+; more information).
 ;valid_hold_statuses = 'On Shelf:Charged'
 
 ; A colon separated list of item codes (ICODE2 in Sierra) that disable item level
@@ -127,12 +128,12 @@ title_hold_bib_levels = "a:b:m:d"
 ; If a colon separated list of rules is provided here, title level hold is only
 ; displayed for records matching any of the rules.
 ; Valid rules are:
-; item                    The title must have at least one item
-; holdable_item           The title must have at least one item that matches the
-;                         item holdability rules (regardless of whether item holds
-;                         are enabled)
-; order                   The title must have at least one active order (order
-;                         record with "ON ORDER" status)
+;   item           The title must have at least one item
+;   holdable_item  The title must have at least one item that matches the
+;                  item holdability rules (regardless of whether item holds are
+;                  enabled)
+;   order          The title must have at least one active order (order record with
+;                  "ON ORDER" status)
 ;title_hold_rules = "holdable_item:order"
 
 ; Fields that can be updated for holds (unless the hold is already in transit or
@@ -159,7 +160,7 @@ title_hold_bib_levels = "a:b:m:d"
 ;allowCancelingAvailableRequests = true
 
 ; This section allows modification of the default mapping from item status codes to
-; VuFind item statuses
+; VuFind item statuses. Defaults are
 [ItemStatusMappings]
 ;! = "On Holdshelf"
 ;t = "In Transit"
@@ -173,9 +174,10 @@ title_hold_bib_levels = "a:b:m:d"
 ;s = "On Search"
 ;d = "In Process"
 ;- = "On Shelf"
-; This is a special case -- not an official Sierra code, but a VuFind-specific way
-; of defining the "checked out" message text:
+; These are special cases -- not official Sierra codes, but a VuFind-specific way
+; of defining the "checked out" and "ordered" message texts:
 ;Charged = "Charged"
+;Ordered = "Ordered"
 
 ; This section allows mapping of patron block codes to VuFind translation strings
 [PatronBlockMappings]
