Add back bib level check for item holds.

--- a/config/vufind/SierraRest.ini
+++ b/config/vufind/SierraRest.ini
@@ -122,6 +122,10 @@ item_hold_excluded_item_codes = "e"
 ; holds.
 ;item_hold_excluded_item_types = "215:251"
 
+; A colon separated list of bib levels that enable item level holds. If not defined,
+; title_hold_bib_levels is used instead.
+;item_hold_bib_levels = "a:b:m:d"
+
 ; A colon separated list of bib levels that enable title level holds
 title_hold_bib_levels = "a:b:m:d"
 
