--- a/config/vufind/SierraRest.ini
+++ b/config/vufind/SierraRest.ini
@@ -164,7 +164,7 @@ title_hold_bib_levels = "a:b:m:d"
 ;allowCancelingAvailableRequests = true
 
 ; This section allows modification of the default mapping from item status codes to
-; VuFind item statuses. Defaults are
+; VuFind item statuses. Defaults are listed below.
 [ItemStatusMappings]
 ;! = "On Holdshelf"
 ;t = "In Transit"
