Add support for "uncertain" item availability status (#2857)
Extends the current availability field with a tri-state option while retaining compatibility. Also changes the status message handling so that if the tri-state field is used and a status message is provided, it's also displayed for available items.

--- a/build.xml
+++ b/build.xml
@@ -501,6 +501,17 @@
         </copy>
       </then>
     </if>
+
+    <!-- Add a local translation for tests -->
+    <if>
+      <not>
+        <available file="${localdir}/languages" type="dir" />
+      </not>
+      <then>
+        <mkdir dir="${localdir}/languages" />
+      </then>
+    </if>
+    <append destFile="${localdir}/languages/en.ini" text="location_main = Main Library${line.separator}" />
   </target>
 
   <target name="setup_database" description="setup demo database">
@@ -702,6 +713,11 @@ ${git_status}
     <delete>
       <fileset dir="${localdir}/cache">
         <include name="**/*" />
+      </fileset>
+    </delete>
+    <delete>
+      <fileset dir="${localdir}/languages">
+        <include name="*" />
       </fileset>
     </delete>
 
