--- a/build.xml
+++ b/build.xml
@@ -54,6 +54,7 @@
   <property name="html_validator_quiet" value="" /><!-- set to 1 to prevent the HTML validation from outputting results to the console  -->
   <property name="phpunit_html_validation_params" value="VUFIND_HTML_VALIDATOR=${html_validator} VUFIND_HTML_VALIDATOR_FAIL_TESTS=${html_validator_fail_tests} VUFIND_HTML_VALIDATOR_LOG_FILE=${html_validator_log_file} VUFIND_HTML_VALIDATOR_QUIET=${html_validator_quiet}" />
   <property name="phpunit_remote_coverage" value="" /><!-- set to 1 to enable code coverage for Mink tests  -->
+  <property name="retain_coverage_files" value="false" /><!-- set to true to keep temporary coverage files from Mink tests -->
 
   <property name="version" value="9.0.1" />
 
@@ -269,6 +270,18 @@
 
     <!-- Produce coverage reports -->
     <exec command="${srcdir}/vendor/bin/phpcov merge --clover ${coveragedir}/clover.xml --html ${coveragedir} ${coveragedir}/tmp" passthru="true" checkreturn="true" />
+
+    <!-- Clean up any tmp files unless told not to, but keep the directory to avoid changing its permissions -->
+    <if>
+      <isfalse value="${retain_coverage_files}" />
+      <then>
+        <delete>
+          <fileset dir="${coveragedir}/tmp">
+            <include name="**/*" />
+          </fileset>
+        </delete>
+      </then>
+    </if>
   </target>
 
   <!-- PHPUnit without logging output -->
