Copy settings from LibGuides to LibGuidesAZ
Commented out, since Parent_Config is present

--- a/config/vufind/LibGuidesAZ.ini
+++ b/config/vufind/LibGuidesAZ.ini
@@ -3,3 +3,14 @@
 ; But copy and override if needed.
 [Parent_Config]
 relative_path = ./LibGuides.ini
+
+; ---------- config.ini settings ----------
+
+;[General]
+;timeout = 30
+;iid = my-id
+;version = 2
+;baseUrl = https://lgapi.libapps.com/widgets.php
+;default_limit        = 20
+;limit_options        = 10,20,40,60,80,100
+;defaultSearch = "general"
