CachedDownloader: Add option to disable caching / use BlackHole adapter instead

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -2038,6 +2038,8 @@ HMACkey = mySuperSecretValue
 ; VUFIND_CACHE_DIR (see httpd-vufind.conf). The default location is inside the
 ; local settings directory.
 [Cache]
+; Uncomment the following line to disable all caching
+;disabled = true
 ; Set time to live value for caches (in seconds), 0 means maximum possible.
 ;ttl = 0
 ; Override umask for cache directories and files.
