feat: npm install splide.

--- a/build.xml
+++ b/build.xml
@@ -388,6 +388,9 @@
         <exclude name="themes/default-dark/" />
       </fileset>
     </copy>
+    <!-- splide -->
+    <copy file="${srcdir}/node_modules/@splidejs/splide/dist/css/splide.min.css" todir="${srcdir}/themes/bootstrap3/css/vendor" overwrite="true" />
+    <copy file="${srcdir}/node_modules/@splidejs/splide/dist/js/splide.min.js" todir="${srcdir}/themes/bootstrap3/js/vendor" overwrite="true" />
     <!-- vanilla-cookieconsent -->
     <copy file="${srcdir}/node_modules/vanilla-cookieconsent/dist/cookieconsent.umd.js" todir="${srcdir}/themes/bootstrap3/js/vendor" overwrite="true" />
   </target>
