--- a/package.json
+++ b/package.json
@@ -14,38 +14,35 @@
     "watch": "npm run watch:css",
     "build-dev": "npm run build-dev:css",
     "watch-dev": "npm run watch-dev:css",
-
     "build:css": "npm run build:less",
     "watch:css": "npm run watch:less",
     "build-dev:css": "npm run build-dev:less",
     "watch-dev:css": "npm run watch-dev:less",
-
     "build:less": "grunt less && npm run lessToSass",
     "watch:less": "grunt watch:less",
     "build-dev:less": "grunt lessdev && npm run lessToSass",
     "watch-dev:less": "grunt watch:lessdev",
-
     "build:scss": "grunt scss",
     "watch:scss": "grunt watch:scss",
-
     "lessToSass": "grunt lessToSass",
     "watch:lessToSass": "grunt watch:lessToSass"
   },
   "dependencies": {
+    "@splidejs/splide": "^4.1.4",
     "autocomplete.js": "vufind-org/autocomplete.js#v2.1.5",
     "grunt": "^1.0.4",
     "grunt-contrib-less": "^2.0.0",
     "grunt-less-to-sass": "duvillierA/grunt-less-to-sass#0.0.11",
     "grunt-sass": "^3.1.0",
     "jit-grunt": "^0.10.0",
-    "node-sass": "^7.0.1"
+    "node-sass": "^7.0.1",
+    "vanilla-cookieconsent": "3.0.0-rc.14"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
     "eslint-plugin-no-jquery": "^2.7.0",
     "grunt-contrib-watch": "^1.1.0",
     "jshint": "^2.13.4",
-    "jstree": "3.3.15",
-    "vanilla-cookieconsent": "3.0.0-rc.14"
+    "jstree": "3.3.15"
   }
 }
