Revert "Fixed encoding for language_map.properties"
This reverts commit a0074839e54bc918d92df03fbee619c815216632.

--- a/import/translation_maps/language_map.properties
+++ b/import/translation_maps/language_map.properties
@@ -161,7 +161,7 @@ frs = East Frisian
 fry = Frisian
 ful = Fula
 fur = Friulian
-gaa = G„
+gaa = G√£
 gay = Gayo
 gba = Gbaya
 gem = Germanic (Other)
@@ -237,7 +237,7 @@ jrb = Judeo-Arabic
 kaa = Kara-Kalpak
 kab = Kabyle
 kac = Kachin
-kal = Kal‚tdlisut
+kal = Kal√¢tdlisut
 kam = Kamba
 kan = Kannada
 kar = Karen languages
@@ -270,7 +270,7 @@ kum = Kumyk
 kur = Kurdish
 kut = Kootenai
 lad = Ladino
-lah = Lahnda
+lah = LahndƒÅ
 lam = Lamba (Zambia and Congo)
 lao = Lao
 lat = Latin
@@ -285,7 +285,7 @@ ltz = Luxembourgish
 lua = Luba-Lulua
 lub = Luba-Katanga
 lug = Ganda
-lui = LuiseÒo
+lui = Luise√±o
 lun = Lunda
 luo = Luo (Kenya and Tanzania)
 lus = Lushai
@@ -317,7 +317,7 @@ mno = Manobo languages
 moh = Mohawk
 mol = Moldavian
 mon = Mongolian
-mos = MoorÈ
+mos = Moor√©
 mun = Munda (Other)
 mus = Creek
 mwl = Mirandese
@@ -340,7 +340,7 @@ nia = Nias
 nic = Niger-Kordofanian (Other)
 niu = Niuean
 nno = Norwegian (Nynorsk)
-nob = Norwegian (BokmÂl)
+nob = Norwegian (Bokm√•l)
 nog = Nogai
 non = Old Norse
 nor = Norwegian
@@ -383,7 +383,7 @@ poz = Malayo-Polynesian
 pqe = Eastern Malayo-Polynesian
 pqw = Western Malayo-Polynesian
 pra = Prakrit languages
-pro = ProvenÁal (to 1500)
+pro = Proven√ßal (to 1500)
 pus = Pushto
 que = Quechua
 qwe = Quechuan
@@ -468,7 +468,7 @@ tgk = Tajik
 tgl = Tagalog
 tha = Thai
 tib = Tibetan
-tig = TigrÈ
+tig = Tigr√©
 tir = Tigrinya
 tiv = Tiv
 tkl = Tokelauan
@@ -503,7 +503,7 @@ uzb = Uzbek
 vai = Vai
 ven = Venda
 vie = Vietnamese
-vol = Volap¸k
+vol = Volap√ºk
 vot = Votic
 wak = Wakashan languages
 wal = Wolayta
