renamed localSystem.ini entries

--- a/local/localSystem.ini
+++ b/local/localSystem.ini
@@ -1,6 +1,6 @@
-[ParentConfig]
-;absolutePath =
-;relativePath =
+[Parent_Dir]
+;absolute_path =
+;relative_path =
 
 [LocalConfig]
-;configSubdir =
+;config_subdir =
