Explain how credentials relate to EDS.ini

--- a/config/vufind/EPF.ini
+++ b/config/vufind/EPF.ini
@@ -1,3 +1,4 @@
+; For the EBSCO Publication Finder data source
 [General]
 
 default_view        = brief
@@ -10,7 +11,9 @@ auth_url = "https://eds-api.ebscohost.com/authservice/rest"
 
 session_url = "https://eds-api.ebscohost.com/edsapi/rest"
 
-; This section represents the EBSCO EDS API Account credentials.
+; This section represents the EBSCO EDS API Account credentials,
+; which are also used for the EPF API.
+; So these should be the same credentials as in EDS.ini if both are used.
 ; If using IP Authentication, then the user_id and password should remain blank
 ; and ip_auth should be set to true.
 [EBSCO_Account]
