--- a/local/DirLocations.ini
+++ b/local/DirLocations.ini
@@ -1,6 +1,12 @@
+; A parent local directory can be specified. When resolving paths to configuration files
+; this dir will also be searched if the file does not exist in the current dir.
 [Parent_Dir]
+; Path to the parent directory
 ;path =
+; Whether the path is relative or absolute
 ;is_relative_path =
 
+; Configurations for this local directory
 [LocalConfig]
+; A custom config subdir can be configured. The default is config/vufind.
 ;config_subdir =
