Update outdated/incorrect EDS.ini language.

--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -239,7 +239,7 @@ SU                  = Subject
 next_prev_navigation = false
 
 ; This section represents the EBSCO EDS API Account credentials.
-; If using IP Authentication, then the user_id and password should remain blank
+; If using IP Authentication, then the user_name and password should remain blank
 ; and ip_auth should be set to true.
 [EBSCO_Account]
 ; IP authentication for the API
@@ -247,7 +247,7 @@ ip_auth = false
 user_name = [USERNAME]
 password  = [PASSWORD]
 profile   = [PROFILE]
-organization_id = "VuFind 2.x from MyUniversity"
+organization_id = "VuFind from MyUniversity"
 
 ; This section controls what happens when a record title in a search result list
 ; is clicked. VuFind can either embed the full result directly in the list using
