--- a/config/vufind/EPF.ini
+++ b/config/vufind/EPF.ini
@@ -95,7 +95,7 @@ facet_limit        = 30     ; how many values should we show for each facet?
 ; This section represents the EBSCO EDS API Account credentials,
 ; which are also used for the EPF API.
 ; So these should be the same credentials as in EDS.ini if both are used.
-; If using IP Authentication, then the user_id and password should remain blank
+; If using IP Authentication, then the user_name and password should remain blank
 ; and ip_auth should be set to true.
 [EBSCO_Account]
 ; IP authentication for the API
@@ -103,4 +103,4 @@ ip_auth = false
 user_name = [USERNAME]
 password  = [PASSWORD]
 profile   = [PROFILE]
-organization_id = "VuFind 2.x from MyUniversity"
+organization_id = "VuFind from MyUniversity"
