Tweaked comments and spacing

--- a/config/vufind/EPF.ini
+++ b/config/vufind/EPF.ini
@@ -1,6 +1,5 @@
 ; For the EBSCO Publication Finder data source
 [General]
-
 default_view        = brief
 
 ; These are the default recommendations modules to use when no specific setting
@@ -24,6 +23,7 @@ api_url = "https://eds-api.ebscohost.com/edsapi/publication"
 ; This is the URL of the EBSCO authorization endpoint:
 auth_url = "https://eds-api.ebscohost.com/authservice/rest"
 
+; This is the URL of the EBSCO session creation endpoint:
 session_url = "https://eds-api.ebscohost.com/edsapi/rest"
 
 ; The order of display is controlled by EBSCO's administrative system.
