Refactor defaultApiUrl and sessionUrl

--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -61,6 +61,9 @@ api_url = "https://eds-api.ebscohost.com/edsapi/rest"
 ; This is the URL of the EBSCO authorization endpoint:
 auth_url = "https://eds-api.ebscohost.com/authservice/rest"
 
+; This is the URL of the EBSCO session creation endpoint:
+session_url = "https://eds-api.ebscohost.com/edsapi/rest"
+
 ; The following two sections can be used to associate specific recommendations
 ; modules with specific search types defined in the [Basic_Searches] section
 ; below.  For all the details on how these sections work, see the comments above
