--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "grunt-less-to-sass": "duvillierA/grunt-less-to-sass#0.0.11",
     "grunt-sass": "^3.1.0",
     "jit-grunt": "^0.10.0",
-    "node-sass": "^7.0.1"
+    "node-sass": "^7.0.1",
+    "simple-keyboard": "^3.6.0",
+    "simple-keyboard-layouts": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
