Add default value note to comment.

--- a/local/DirLocations.ini
+++ b/local/DirLocations.ini
@@ -3,7 +3,7 @@
 [Parent_Dir]
 ; Path to the parent directory
 ;path =
-; Whether the path is relative or absolute
+; Whether the path is relative or absolute (defaults to false)
 ;is_relative_path =
 
 ; Configurations for this local directory
