Minor English edit.

--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -160,7 +160,7 @@ load_results_with_js = true
 ;                        disabled)
 ; simple                 Simple next/prev button pagination (default when
 ;                        load_results_with_js is enabled)
-; full                   Full pagination alike the one at the bottom of results
+; full                   Full pagination alike to the one at the bottom of results
 ;top_paginator = simple
 
 [Cache]
