Add support for Laminas 'Dumb' CAPTCHA. (#2959)

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -2258,6 +2258,7 @@ validateHierarchySequences = true
 ; your instance.
 ;[Captcha]
 ; Valid type values:
+; - dumb (ask the user to reverse a random string; only recommended for testing)
 ; - figlet (generate a text-based message for the user to interpret)
 ; - image (generate a local image for the user to interpret)
 ; - interval (allow an action after a specified time has elapsed from session start
