Fixed wrong section name in DirLocations.ini

--- a/local/DirLocations.ini
+++ b/local/DirLocations.ini
@@ -7,6 +7,6 @@
 ;is_relative_path =
 
 ; Configurations for this local directory
-[LocalConfig]
+[Local_Dir]
 ; A custom config subdir can be configured. The default is config/vufind.
 ;config_subdir =
