renamed local/DirLocations.ini to local/DirLocations.ini.dist and added the original name to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ lessphp_*.list
 module/VuFind/tests/.phpunit.result.cache
 node_modules
 public/swagger-ui
+local/DirLocations.ini
 local/config/vufind/*.ini
 local/config/vufind/*.json
 local/config/vufind/*.yaml
