LibGuides Profile recommendation module
functional but needs work

--- a/config/vufind/contentsecuritypolicy.ini
+++ b/config/vufind/contentsecuritypolicy.ini
@@ -47,6 +47,8 @@ worker-src[] = "blob:"
 style-src[] = "'self'"
 style-src[] = "'unsafe-inline'"
 img-src[] = "'self'"
+; If you are using LibGuidesProfile recommendation module, uncomment the line below
+;img-src[] = libapps.s3.amazonaws.com
 ; If you are using MapSelection recommendation module, uncomment a line below
 ; for the basemap you are using:
 ;img-src[] = "https://maps.wikimedia.org"
