Add documention and clean code

--- a/config/vufind/LibGuidesAPI.ini
+++ b/config/vufind/LibGuidesAPI.ini
@@ -11,7 +11,10 @@
 ; See LibGuides.ini and LibGuidesAZ.ini for that configuration.
 
 [General]
+; Client Id & Secret provided by LibGuides API configuration
+; See https://ask.springshare.com/libguides/faq/873#api-auth
 ;client_id = 123
 ;client_secret = ABCD
 
+; Base URL of the LibGuides API
 api_base_url = https://lgapi-us.libapps.com/1.2
