Clarify API documentation link

--- a/config/vufind/LibGuidesAPI.ini
+++ b/config/vufind/LibGuidesAPI.ini
@@ -1,6 +1,8 @@
 ; This file is used for the LibGuides *API*, which uses an
 ; oauth connection mechanism.  This API is currently used
 ; by the LibGuidesProfile recommendation module.
+
+; LibGuides API documentation:
 ; https://ask.springshare.com/libguides/faq/873
 
 ; This file is NOT used by the LibGuides (research guides)
