Note CSP requirement

--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -291,7 +291,8 @@ WorkKeys = year
 ; LibGuidesProfile
 ;       Display a single LibGuides Profile for a LibGuides user (likely a librarian)
 ;       who owns a subject guide whose title most closely matches the search terms.
-;       Uses configuration in LibGuidesAPI.ini.
+;       Uses configuration in LibGuidesAPI.ini and requires configuration in 
+;       contentsecuritypolicy.ini.
 ; LibGuidesResults:[GET parameter]:[result limit]
 ;       Display LibGuides research guides search results matching the terms found in 
 ;       the specified GET parameter (default = "lookfor"), limited to a specified 
