Cache /accounts response

--- a/config/vufind/LibGuidesAPI.ini
+++ b/config/vufind/LibGuidesAPI.ini
@@ -20,3 +20,8 @@
 
 ; Base URL of the LibGuides API
 api_base_url = https://lgapi-us.libapps.com/1.2
+
+; Calls to GET (...)/accounts endpoint
+[GetAccounts]
+; Duration (seconds) to cache repsonse data.  Default is 600.
+;cache_lifetime = 600
