--- a/config/vufind/LibGuidesAPI.ini
+++ b/config/vufind/LibGuidesAPI.ini
@@ -23,5 +23,5 @@ api_base_url = https://lgapi-us.libapps.com/1.2
 
 ; Calls to GET (...)/accounts endpoint
 [GetAccounts]
-; Duration (seconds) to cache repsonse data.  Default is 600.
+; Duration (seconds) to cache response data.  Default is 600.
 ;cache_lifetime = 600
