Add recommendation module for LibGuides Profiles (#2977)

--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -288,6 +288,11 @@ WorkKeys = year
 ; FacetCloud:[ini section]:[ini name]
 ;       Same functionality as ExpandFacets, but with a more compact interface to
 ;       allow the display of more values.
+; LibGuidesProfile
+;       Display a single LibGuides Profile for a LibGuides user (likely a librarian)
+;       who owns a subject guide whose title most closely matches the search terms.
+;       Uses configuration in LibGuidesAPI.ini and requires configuration in 
+;       contentsecuritypolicy.ini.
 ; LibGuidesResults:[GET parameter]:[result limit]
 ;       Display LibGuides research guides search results matching the terms found in 
 ;       the specified GET parameter (default = "lookfor"), limited to a specified 
