KohaRest: Add missing permission to .ini comment.

--- a/config/vufind/KohaRest.ini
+++ b/config/vufind/KohaRest.ini
@@ -39,6 +39,7 @@ host = "http://koha-server/api"
 ; - circulate_remaining_permissions
 ; - catalogue
 ; - borrowers
+;   - delete_borrowers
 ;   - edit_borrowers
 ;   - view_borrower_infos_from_any_libraries
 ; - reserveforothers
