Add simulated single sign-on for testing purposes.

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -480,6 +480,7 @@ method         = Database
 ;method         = Facebook
 ;method         = PasswordAccess
 ;method         = Email
+;method         = SimulatedSSO ; INTENDED FOR TEST/DEVELOPMENT PURPOSES ONLY
 
 ; This setting only applies when method is set to ILS.  It determines which
 ; field of the ILS driver's patronLogin() return array is used as the username
