CachedDownloader: Change config override mechanism

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -2050,6 +2050,11 @@ HMACkey = mySuperSecretValue
 ; Default file_permission seems to be 0600.
 ;file_permission = 0600
 
+; The following Cache_ sections are empty. You can use them to override the
+; default settings from the [Cache] section in the given context if necessary.
+[Cache_GoogleCover]
+[Cache_OrbCover]
+
 ; This section controls the "Collections" module -- the special view for records
 ; that represent collections, and the mechanism for browsing these records.
 [Collections]
