Use CachingDownloader for Google and Orb covers (#2659)
- Includes new mechanism for disabling caching
- Includes new configuration settings for service-specific cache settings
---------

Co-authored-by: Demian Katz <demian.katz@villanova.edu>

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -964,26 +964,21 @@ verify_server_certificate = false
 ;coversize = false
 
 ; You can select Syndetics, LibraryThing, Summon, Booksite, OpenLibrary,
-; Contentcafe, Buchhandel.de, Google Books, BrowZine, ObalkyKnih, Orb, Koha and/or
-; LocalFile.
-;   Note: BrowZine requires you to have BrowZine.ini configured appropriately.
-;   Note: ObalkyKnih could be configured in obalkyknih.ini file. You should also
-;       add API URLs to img-src directive in contentsecuritypolicy.ini. As the
-;       conditions of use of ObalkyKnih require backlinks to provider, you need to
-;       also turn on ajaxcovers below - VuFind is able to show backlinks only
-;       through AJAX at this time.
-;   Note: Summon service takes a Serials Solutions client key, NOT Summon API key!
-;   Note: For Orb, don't forget to complete [Orb] section.
-;   Note: For Koha, don't forget to add koha_cover_url below. Additionally, for
-;         Koha to be a source of covers, its LocalCoverImages and
-;         OPACLocalCoverImages system preferences must be turned on and local cover
-;         images uploaded to the Koha system. Koha emits only two sizes of cover
-;         images, so small and medium are treated the same in VuFind.
-;   For LocalFile:PathToFile, you may use a combination of directory path information
-;        and tokens for filename and image type. If you have multiple directories
-;        in which you have stored coverimages, you can specify multiple paths to search
-;        by specifying multiple LocalFile:PathToFile in the coverage images list below.
-;        Allowed tokens:
+; Contentcafe, Buchhandel.de, Google, BrowZine, ObalkyKnih, Orb, Koha and/or
+; LocalFile. Service-specific notes:
+;   - BrowZine requires you to have BrowZine.ini configured appropriately.
+;   - Google Books caching behavior can be customized in the [Cache_GoogleCover]
+;       section.
+;   - Koha requires the koha_cover_url setting below. Additionally, for
+;       Koha to be a source of covers, its LocalCoverImages and
+;       OPACLocalCoverImages system preferences must be turned on and local cover
+;       images uploaded to the Koha system. Koha emits only two sizes of cover
+;       images, so small and medium are treated the same in VuFind.
+;   - LocalFile:PathToFile supports a combination of directory path information
+;       and tokens for filename and image type. If you have multiple directories
+;       in which you have stored coverimages, you can specify multiple paths to search
+;       by specifying multiple LocalFile:PathToFile in the coverage images list below.
+;       Allowed tokens:
 ;          %anyimage%         - Match known image file extensions (gif, jpg, etc.)
 ;          %isbn10%           - 10-digit ISBN
 ;          %isbn13%           - 13-digit ISBN
@@ -996,6 +991,14 @@ verify_server_certificate = false
 ;          %vufind-home%      - The VUFIND_HOME environment variable
 ;          %vufind-local-dir% - The VUFIND_LOCAL_DIR environment variable
 ;        Example: LocalFile:%vufind-local-dir%/path/to/file/%size%/issn/%issn%.%anyimage%
+;   - ObalkyKnih could be configured in obalkyknih.ini file. You should also
+;       add API URLs to img-src directive in contentsecuritypolicy.ini. As the
+;       conditions of use of ObalkyKnih require backlinks to provider, you need to
+;       also turn on ajaxcovers below - VuFind is able to show backlinks only
+;       through AJAX at this time.
+;   - Orb requires that you complete the [Orb] section. Cache settings can be
+;       adjusted in the [Cache_OrbCover] section.
+;   - Summon service takes a Serials Solutions client key, NOT Summon API key!
 ;coverimages     = Syndetics:MySyndeticsId,Booksite,LibraryThing:MyLibraryThingId,Google,ObalkyKnih,OpenLibrary,Summon:MySerialsSolutionsClientKey,Contentcafe:MyContentCafeID,BrowZine,LocalFile:PathToFile,Koha,Orb
 
 ; When using the Koha cover provider, you should fill in this setting:
@@ -2040,6 +2043,8 @@ HMACkey = mySuperSecretValue
 ; VUFIND_CACHE_DIR (see httpd-vufind.conf). The default location is inside the
 ; local settings directory.
 [Cache]
+; Uncomment the following line to disable all caching
+;disabled = true
 ; Set time to live value for caches (in seconds), 0 means maximum possible.
 ;ttl = 0
 ; Override umask for cache directories and files.
@@ -2049,6 +2054,11 @@ HMACkey = mySuperSecretValue
 ;dir_permission = 0700
 ; Default file_permission seems to be 0600.
 ;file_permission = 0600
+
+; The following Cache_ sections are empty. You can use them to override the
+; default settings from the [Cache] section in the given context if necessary.
+[Cache_GoogleCover]
+[Cache_OrbCover]
 
 ; This section controls the "Collections" module -- the special view for records
 ; that represent collections, and the mechanism for browsing these records.
