multiple changes for overdrive API changes

--- a/config/vufind/Overdrive.ini
+++ b/config/vufind/Overdrive.ini
@@ -36,6 +36,10 @@ noAccessString = ""
 ; more overhead with it on. Default is false.
 consortiumSupport = false
 
+;AJAX Status is supported, but you can turn it off it's slowing the search results
+;page down.
+enableAjaxStatus = true
+
 [API]
 ; You should only have to change these top 5 in most cases. These
 ; values should be supplied to you by the Overdrive API support team.
